[package]
name = "Lander"
version = "0.1.0"
edition = "2024"

[lib]
name = "Lander"
path = "src/lib.rs"

[[bin]]
name = "Lander"
path = "src/main.rs"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
ndarray = "0.15"
ndarray-linalg = "0.16"
optimization_engine = "0.6.0"
rust-ekf = { git = "https://github.com/GTPL-Testing/navigation.git" }
rust_lossless = { git = "https://github.com/GTPL-Testing/guidance.git" }
MPC = { git = "https://github.com/GTPL-Testing/control.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcap = "0.25.0"
libc = "0.2"
